Fix scrollbar causing layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@ body {
   max-width: 100vw;
   background-color: #f6ffdf;
   height: fit-content;
+  scrollbar-gutter: stable;
 }
 
 a {
